# ds-project-template

./: .env.example  .gitignore  AGENTS.md  README.md  init_template.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: commands.md  decisions.md  directory_structure.md  style.md
