[project]
name = "ds-project-template"
version = "0.1.0"
description = "Template for data science projects."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=8.10",
    "matplotlib>=3.10.9",
    "mypy==1.19.1",
    "numpy>=2.4.4",
    "openpyxl>=3.0.6",
    "pandas>=3.0.2",
    "pyjanitor>=0.32.23",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "ruff==0.15.6",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]

[tool.ruff]
line-length = 79
target-version = "py311"
force-exclude = true

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
explicit_package_bases = true
ignore_missing_imports = true
